<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ThirdActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="565dp"
        tools:ignore="UselessParent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="50dp">

            <TextView
                android:id="@+id/Title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/rock_paper_scissors"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" />

            <TextView
                android:id="@+id/computer"
                android:layout_width="205dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/computer"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/player"
                android:layout_width="205dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/player"
                android:textSize="24sp" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="414dp">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="204dp"
                android:layout_height="match_parent"
                android:contentDescription="TODO"
                app:srcCompat="@drawable/scissor" />

            <LinearLayout
                android:layout_width="207dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/imbtnScissor"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:background="#00000000"
                    android:contentDescription="@string/scissor"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/scissor" />

                <ImageButton
                    android:id="@+id/imbtnRock"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:background="#00000000"
                    android:contentDescription="@string/rock"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/rock" />

                <ImageButton
                    android:id="@+id/imbtnPaper"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:background="#00000000"
                    android:contentDescription="@string/paper"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/paper" />
            </LinearLayout>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:id="@+id/txtResult"
                android:layout_width="411dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/play_choose_a_button"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Button
                android:id="@+id/btnBacktoFirst2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/back2"
                android:background="#800080"
                android:textColor="@color/color_text"/>
        </TableRow>
    </TableLayout>
</LinearLayout>